--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_color-vars.scss
@@ -15,6 +15,7 @@ $red          : #bf0e0e;
 $pink         : #f8e8f1;
 
 /* ADMINS - do not customize per site */
+$gold          : #fcd105;
 $fuchsia       : #c028bb;
 $purple        : #8b01e2;
 $green         : #018901;
