--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -58,6 +58,8 @@ $tabsActiveBorder : $gold;
 $tabsActiveText   : $black;
 
 $formElementBorder        : $borderRule;
+$formElementBorderHover   : $borderRule;
+$formElementBorderFocus   : $black;
 $placeColor               : $baseText;
 $placeFocusColor          : $placeColor;
 $validation               : $red;
