--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -77,6 +77,8 @@ $searchCloseBackHover      : $black;
 /* FORMS
 --------------------- */ 
 $formElementBorder        : $borderRule;
+$formElementBorderHover   : $borderRule;
+$formElementBorderFocus   : $link;
 $placeColor               : $baseText;
 $placeFocusColor          : $placeColor;
 $validation               : $brightRed;
