--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -60,6 +60,8 @@ $tabsActiveText   : $black;
 $formElementBorder        : $borderRule;
 $formElementBorderHover   : $borderRule;
 $formElementBorderFocus   : $black;
+$metaBorderSoft           : rgba(35,35,35,0.1);
+$metaBorderHard           : rgba(35,35,35,0.3);
 $placeColor               : $baseText;
 $placeFocusColor          : $placeColor;
 $validation               : $red;
