--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_02-select.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_02-select.scss
@@ -44,6 +44,17 @@ body .select2-container--default{
 	//single filter
 	.select2-selection--single{
 		@include inputSelect;
+		&:hover{
+			box-shadow: inset 0 0 0 1px $formElementBorderHover;
+		}
+		&:focus{
+			outline: none;
+			box-shadow: inset 0 0 0 1px $formElementBorderFocus;
+		}
+		&[aria-expanded="true"]{
+			box-shadow: inset 0 0 0 1px $formElementBorderFocus;
+			border-color: $formElementBorderFocus;
+		}
 		.select2-selection__choice__remove{
 			position: relative;
 			z-index: 999;
@@ -56,7 +67,7 @@ body .select2-container--default{
 		}
 		.select2-selection__arrow{
 			@include triangle(down,12px,16px,$selectArrow);
-			top: 14px;
+			top: 17px;
 			right: 10px;
 			//hide default select2 arrow
 			b{
@@ -76,6 +87,17 @@ body .select2-container--default{
 	.select2-selection--multiple{
 		@include inputSelect;
 		padding: 3px 0 3px 0;
+		&:hover{
+			box-shadow: inset 0 0 0 1px $formElementBorderHover;
+		}
+		&:focus{
+			outline: none;
+			box-shadow: inset 0 0 0 1px $formElementBorderFocus;
+		}
+		&[aria-expanded="true"]{
+			box-shadow: inset 0 0 0 1px $formElementBorderFocus;
+			border-color: $formElementBorderFocus;
+		}
 		.select2-selection__choice__remove{
 			position: relative;
 			z-index: 999;
@@ -115,6 +137,9 @@ body .select2-container--default{
 /* SELECT 2 ACTIVE
 -------------------- */
 body .select2-container--default{
+	&:focus{
+		outline: none;
+	}
 	//active select2
 	&.select2-container--open,&.select2-container--focus{
 
@@ -151,10 +176,14 @@ body .select2-container--default{
 ---------------- */
 .select2-container{
 	.select2-dropdown{
-		border: 2px solid $formElementBorder;
+		border: 2px solid $formElementBorderFocus;
 		border-radius: 0;
 		border-top: 0;
 		padding: 0;
+		.select2-search__field{
+			outline: none;
+			border-color: $formElementBorderFocus;
+		}
 	}
 }
 .select2-container--default .select2-results__option[aria-selected="true"]{
