--- a/web/themes/crane/scss/components/_modals.scss
+++ b/web/themes/crane/scss/components/_modals.scss
@@ -89,19 +89,14 @@
 			@include calcForce(width, "25% - 20px");
 		}
 		&:hover{
-			opacity: .6;
+			box-shadow: 0 0 1px 2px $formElementBorderHover;
+			.views-field-thumbnail__target-id:before{
+				background-color: rgba(255,255,255,.3);
+			}
 		}
 		&.selected{
 			.views-field-thumbnail__target-id{
-				position: relative;
 				&:before{
-					content: '';
-					display: block;
-					position: absolute;
-					top: 0;
-					left: 0;
-					width: 100%;
-					height: 100%;
 					background-color: rgba(35,35,35,.7);
 					background-image: url('../images/icons/admin-icons/checkmark.svg');
 					background-repeat: no-repeat;
@@ -109,11 +104,29 @@
 					background-position: center;
 				}
 			}
+			&:hover{
+				.views-field-thumbnail__target-id:before{
+					background-color: rgba(255,255,255,.3);
+				}
+			}
 		}
 	}
-	.views-field-thumbnail__target-id img{
-	  width: 100%;
-	  display: block;
+	.views-field-thumbnail__target-id{
+		position: relative;
+		&:before{
+			content: '';
+			display: block;
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: transparent;
+		}
+		img{
+	  	width: 100%;
+	  	display: block;
+		}
 	}
 	.views-field-entity-browser-select{
 		position: absolute;
