--- a/web/themes/crane/scss/elements/_form-elements.scss
+++ b/web/themes/crane/scss/elements/_form-elements.scss
@@ -348,14 +348,24 @@ select:hover,select:focus{
 		position: relative;
 		top: 3px;
 		cursor: pointer;
-		&:hover,&:focus{
+		&:hover{
+			border-color: $checkboxHover;
+			background-color: $checkboxBackHover;
+			box-shadow: 0 0 0 1px $checkboxHover;
+		}
+		&:focus{
 			border-color: $checkboxHover;
 			background-color: $checkboxBackHover;
 		}
 		&:checked{
 			border-color: $checkboxChecked;
 			background-color: $checkboxCheckedBack;
-			&:hover,&:focus{
+			&:hover{
+				border-color: $checkboxCheckedHover;
+				background-color: $checkboxCheckedBackHover;
+				box-shadow: 0 0 0 1px $checkboxCheckedHover;
+			}
+			&:focus{
 				border-color: $checkboxCheckedHover;
 				background-color: $checkboxCheckedBackHover;
 			}
@@ -394,8 +404,27 @@ select:hover,select:focus{
 
 /* FIELDSETS & CKE Containers
 ------------------- */
-fieldset,.form-textarea-wrapper .cke_chrome{
-	border-color: $borderRule;
+.text-format-wrapper{
+	.filter-wrapper{
+		display: none;
+	}
+}
+
+fieldset{
+	border-color: $formElementBorder;
+	&:hover{
+		box-shadow: inset 0 0 0 1px $formElementBorderHover;
+		border-color: $formElementBorderHover;
+		@include transAll(.3s);
+	}
+	&.ief-form{
+		box-shadow: inset 0 0 0 1px $formElementBorderFocus;
+		border-color: $formElementBorderFocus;
+	}
+}//end fieldset
+
+.form-textarea-wrapper .cke_chrome{
+	border-color: $formElementBorder;
 	& > .cke_inner{
 		border: 1px solid transparent;
 	}
@@ -407,9 +436,11 @@ fieldset,.form-textarea-wrapper .cke_chrome{
 			border-color: $formElementBorderHover;
 		}
 	}
-}//end fieldsets and cke
-.text-format-wrapper{
-	.filter-wrapper{
-		display: none;
+	&.cke_focus{
+		border-color: $formElementBorderFocus;
+		box-shadow: inset 0 0 0 1px $formElementBorderFocus;
+		& > .cke_inner{
+			border-color: $formElementBorderFocus;
+		}
 	}
-}
+}//end cke-chrome
